# functional-data-structures

./: README.md  funcdata.cabal
app/: AppendListMain.hs  ListContextMain.hs  TreeContextMain.hs
src/: AppendList.hs  ListContext.hs  TreeContext.hs
